# dagster-io-managers

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
src/dagster_io_managers/: __init__.py  base.py  datasets.py  polars.py  text.py
src/dagster_io_managers/aws_utils/: __init__.py  s3.py
tests/: __init__.py  conftest.py
tests/aws_utils/: __init__.py  test_s3.py
tests/integration/: test_aws_utils.py  test_polars.py  test_text.py
tests/integration/aws_utils/: __init__.py  test_s3.py
tests/integration/datasets/: __init__.py
tests/integration/polars/: __init__.py  test_local.py  test_s3.py
tests/integration/text/: __init__.py  test_local.py  test_s3.py
tests/polars/: __init__.py  test_local.py
tests/unit/: test_aws_utils.py  test_datasets.py  test_polars.py  test_text.py
tests/unit/aws_utils/: __init__.py  test_s3.py
tests/unit/datasets/: __init__.py  test_local.py  test_s3.py
tests/unit/polars/: __init__.py  test_local.py  test_s3.py
tests/unit/text/: __init__.py  test_local.py  test_s3.py
